--- a/pages/index.css
+++ b/pages/index.css
@@ -135,15 +135,17 @@
   max-width: 438px;
 }
 
+.recipes__iframe {
+  width: 480px;
+  height: 273px;
+}
+
 .recipes__videos {
   margin: 0;
   list-style: none;
   display: flex;
   justify-content: center;
   gap: 40px;
-  /*
-  width: 480px;
-  height: 273px;*/
 }
 
 .recipes__video-caption {
