Project 2 stage 4 BEM

--- a/pages/index.css
+++ b/pages/index.css
@@ -1,248 +1,8 @@
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
-  font-family: "Inter", "Arial", sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.header {
-  height: 800px;
-  padding: 30px 80px 40px;
-  background-color: #fff;
-  background-image: url(../images/background_header.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-}
-
-.header__title {
-  font-family: "Inter";
-  font-weight: 500;
-  font-style: normal;
-  font-size: 60px;
-  line-height: 72px;
-  margin: 183px 0 0;
-  max-width: 729px;
-}
-
-.header__description {
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-size: 20px;
-  line-height: 30px;
-  margin: 28px 0 0;
-  max-width: 683px;
-}
-
-.header__image {
-  position: absolute;
-  top: 124px;
-  right: 5px;
-  max-width: 646px;
-  max-height: 568px;
-}
-
-.header__footer {
-  font-family: "Inter";
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #6f6f6f;
-  margin-top: auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-}
-
-.header__paragraph {
-  margin: 0;
-}
-
-.header__span-accent {
-  font-style: italic;
-  display: block;
-  max-width: 729px;
-  color: #3f96f3;
-  font-family: "Noto Serif";
-  font-weight: normal;
-}
-
-.nav {
-  margin-right: 80px;
-  margin-bottom: 0;
-  margin-top: 30px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav__logo {
-  position: relative;
-  left: -50px;
-  height: 39px;
-  width: 105px;
-}
-
-.nav__link {
-  color: #000;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  text-decoration: none;
-}
-
-.nav__links {
-  font-family: "Inter";
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  gap: 20px;
-  list-style-type: none;
-  padding: 0;
-  margin: 0 0 0;
-  display: flex;
-}
-
-.recipes {
-  background-image: url(../images/background_recipes.svg);
-  background-size: cover;
-  color: #fff;
-  background-color: #0a2750;
-  padding: 100px 80px 215px;
-}
-
-.recipes__title {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  margin: 0 0 24px;
-  max-width: 580px;
-}
-
-.recipes__subtitle {
-  font-family: "Noto Serif";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  margin: 0 0 80px;
-  max-width: 438px;
-}
-
-.recipes__iframe {
-  width: 480px;
-  height: 273px;
-}
-
-.recipes__videos {
-  margin: 0;
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  gap: 40px;
-}
-
-.recipes__video-caption {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-  display: flex;
-  justify-content: space-between;
-  margin: 24px 0 0;
-}
-
-.reservation {
-  padding: 100px 0 120px;
-  background-color: #d9e7ff;
-  background-image: url(../images/background_reservation.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-.reservation__title {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  text-align: center;
-  margin: 0 0 80px;
-}
-
-.reservation__form {
-  margin: 0 auto;
-}
-
-.form {
-  max-width: 385px;
-}
-
-.form__fieldset {
-  margin: 0;
-  padding: 0;
-  border: none;
-}
-
-.form__label {
-  color: #000;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.form__input {
-  color: #838383;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  padding: 15px 20px;
-  box-sizing: border-box;
-  display: block;
-  width: 100%;
-  margin: 8px 0 32px;
-  border: solid #838383;
-  border-radius: 4px;
-}
-
-.form__button {
-  color: #fff;
-  background-color: #1878dc;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  margin-bottom: 32px;
-  border-radius: 4px;
-  border: none;
-  padding: 20px 0;
-  width: 100%;
-}
-
-.form__checkbox {
-  width: 20px;
-  height: 20px;
-  border-radius: 2px;
-}
-
-.form__checkbox :hover {
-  background-color: #1878dc;
-  background-image: url(../images/check.svg);
-}
-
-.form__label_type_checkbox {
-  display: flex;
-  justify-content: center;
-  gap: 12px;
-}
+@import url(../vendor/normalize.css);
+@import url(../blocks/page.css);
+@import url(../header/header.css);
+@import url(../nav/nav.css);
+@import url(../nav/nav.css);
+@import url(../recipes/recipes.css);
+@import url(../reservation/reservation.css);
+@import url(../form/form.css);
