--- a/pages/index.css
+++ b/pages/index.css
@@ -1,8 +1,9 @@
 @import url(../vendor/normalize.css);
+@import url(../blocks/form.css);
+@import url(../blocks/header.css);
+@import url(../blocks/nav.css);
 @import url(../blocks/page.css);
-@import url(../header/header.css);
-@import url(../nav/nav.css);
-@import url(../nav/nav.css);
-@import url(../recipes/recipes.css);
-@import url(../reservation/reservation.css);
-@import url(../form/form.css);
+@import url(../blocks/recipes.css);
+@import url(../blocks/reservation.css);
+@import url(../blocks/menu.css);
+@import url(../blocks/card.css);
