Project_2_stage_4_final

--- a/blocks/about.css
+++ b/blocks/about.css
@@ -1,10 +1,13 @@
 .about {
+  position: relative;
   font-family: "Inter", Arial, sans-serif;
   background-color: #0a2850;
   color: #fffd;
   padding: 100px 80px 173px;
   display: flex;
   justify-content: space-between;
+  overflow: hidden;
+  z-index: 0;
 }
 
 .about__title {
@@ -30,5 +33,29 @@
 }
 
 .about__circle {
+  z-index: -1;
   position: absolute;
+  left: -129px;
+  top: -153px;
+  width: 426px;
+  height: 426px;
+  background-color: #1878dc;
+  border-radius: 50%;
+}
+
+@keyframes pulsate {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 0%;
+    transform: scale(1.5);
+  }
+}
+
+.about__circle_animation_blurred {
+  animation: pulsate 1.3s ease-in-out 0s infinite;
 }
