--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -21,6 +21,12 @@
   font-size: 16px;
   line-height: 20px;
   text-decoration: none;
+  transition: color 0.1s linear 0.1s;
+  cursor: pointer;
+}
+
+.nav__link:hover {
+  color: #2f80ed;
 }
 
 .nav__links {
