Project_2_stage_4_final_corrected

--- a/blocks/about.css
+++ b/blocks/about.css
@@ -27,7 +27,7 @@
 
 .about__paragraph {
   margin: 0;
-  font-family: "Noto Serif" "Times New Roman", serif;
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 20px;
   line-height: 30px;
 }
