--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,6 +1,6 @@
 .footer {
   padding: 60px 80px;
-  font-family: "Inter" Arial, Helvetica, sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
   color: #fff;
@@ -51,12 +51,13 @@
   display: flex;
   color: #fff;
   text-decoration: none;
-  transition: color 0.1s linear 0.1s;
+  transition: opacity 0.3s ease;
   cursor: pointer;
 }
 
 .footer__social-link:hover {
   color: #c1c1c1;
+  opacity: 0.7;
 }
 
 .footer__copyright {
