--- a/blocks/form.css
+++ b/blocks/form.css
@@ -36,7 +36,7 @@
 .form__button {
   color: #fff;
   background-color: #1878dc;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -48,23 +48,20 @@
   width: 100%;
   transition: opacity 0.1s;
   cursor: pointer;
-  transition: opacity 0.2%;
 }
 
-.form__button :hover {
-  background-color: #1878dc;
-  opacity: 0.2%;
+.form__button:hover {
+  background-color: #3f96f3;
+  transition: background-color 0.3s ease;
 }
 
 .form__checkbox {
+  background-color: #1878dc;
+  background-image: url(../images/check.svg);
   width: 20px;
   height: 20px;
   border-radius: 2px;
-}
-
-.form__checkbox :hover {
-  background-color: #1878dc;
-  background-image: url(../images/check.svg);
+  cursor: pointer;
 }
 
 .form__label_type_checkbox {
